# API

./: README.md  app.py  pyproject.toml  testes.ipynb
