[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "guborzani",email = "gustavolopesvic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shell (>=1.0.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit (>=1.48.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
